fix navbar header on mobile

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2583,4 +2583,7 @@ b,
     .distanceHeader {
         margin-top: 0px;
     }
+    .navbar-brand {
+        width: 82% !important;
+    }
 }
